Fix tumblr button alignment when logged in. Closes #344

--- a/tumblr/less/app.less
+++ b/tumblr/less/app.less
@@ -785,3 +785,8 @@ body {
         }
     }
 }
+
+// Center logged-in tumblr controls in fixed nav bar
+#tumblr_controls[height="26"] {
+    margin-top: 5px;
+}
